fix overflow

--- a/quiz/client/serve/style.css
+++ b/quiz/client/serve/style.css
@@ -428,6 +428,7 @@ input[type=checkbox]:disabled {
   padding: 0;
   position: relative;
   z-index: 0;
+  overflow: hidden;
   border: 0;
 }
 .container.container-image:after {
