--- a/quiz/client/src/sass/elements/container.scss
+++ b/quiz/client/src/sass/elements/container.scss
@@ -28,6 +28,7 @@
     padding: 0;
     position: relative;
     z-index: 0;
+    overflow: hidden;
 
     border: 0;
     &:after {
